<resources>
    <string name="app_name">IOT温湿度</string>
    <string name="action_view">视图</string>
    <string name="action_records">日志</string>
    <string name="action_update">更新</string>
    <string name="action_about">关于</string>
    
    <string name="add_device">新增设备</string>
    <string name="control_device">设备操作</string>
    <string name="node_type">节点类型</string>
    <string name="node_label">节点编号</string>
    <string name="node_alias">节点别名</string>
    <string name="node_location">节点位置</string>

    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="only_num">*纯数字</string>
</resources>